add model inheritance support, update java and openapi generators